# temp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  dagger.json  flake.nix  go.mod  go.sum  main.go
.dagger/: go.mod  main.go
.github/workflows/: ci.yml  (+1 more)
c-src/: bar.c  bridge.c  bridge.h  drw.c  events.c  mouse.c  wm.h  workspace.c
cmd/: bar.go  kickstart.go  restart.go  root.go  shutdown.go  start.go  version.go
compositor/: .gitignore  Makefile  README.md  dagger.json  meson.build  meson_options.txt
compositor/data/: animations.conf
compositor/include/: meson.build
compositor/include/srcom/: api.h  backend.h  meson.build
compositor/meson/: install.sh
compositor/src/: api.c  atom.h  common.h  config.c  config.h  config_libconfig.c  event.c  log.c  meson.build  options.c  options.h  region.h  srcom.c  srcom.h  srcom.modulemap  vblank.c  x.c  x.h
compositor/src/backend/: backend.c  backend.h  driver.c  meson.build
compositor/src/backend/gl/: egl.c  gl_common.c  gl_common.h  meson.build  shaders.c
compositor/src/renderer/: command_builder.c  damage.c  damage.h  layout.c  layout.h  renderer.c  renderer.h
compositor/src/utils/: meson.build  misc.c  misc.h  process.c  process.h  ui.h
compositor/src/wm/: win.c  win.h  wm.h
config/: bar.lua  canvas.lua  compositor.lua  general.lua  srwmrc.lua  startup.lua
old-go-srwm/: flake.nix
scripts/: srwm_bar  srwm_start  srwmctl
src/: cli.rs  compositor.rs  config.rs  dbus.rs  deploy.rs  ffi.rs  ipc.rs  main.rs  xserver.rs
vxwm/: .gitignore  Makefile  README.md  config.def.h
(+107 files in other folders)
