[package]
name = "srwm"
version = "0.5.4"
edition = "2024"

[features]  
default = ["embedded-compositor"]  
embedded-compositor = []  
  
[dependencies]
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
dirs = "6"
clap = { version = "4.6", features = ["derive"] }
which = "7"
signal-hook = "0.3"
libc = "0.2.183"
getrandom = "0.2"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.58"
pkg-config = "0.3.32"
