option('sanitize', type: 'boolean', value: false, description: 'Build with sanitizers enabled (deprecated)')
option('regex', type: 'boolean', value: false, description: 'Enable regex support in window conditions')

option('with_docs', type: 'boolean', value: false, description: 'Build documentation and man pages')

option('unittest', type: 'boolean', value: false, description: 'Enable unittests in the code')

# Experimental options

option('modularize', type: 'boolean', value: false, description: 'Build with clang\'s module system (experimental)')
option('llvm_coverage', type: 'boolean', value: false, description: 'Use LLVM source-based code coverage, instead of --coverage. Do not use with b_coverage.')
